feat(device) detect brand Unihertz model: Atom L feat(device) detect brand Runbo model: F1-TT feat(device) detect brand Runbo model: F1-TT feat(device) detect brand Fero models: A4001, A4502, L100

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16024,12 +16024,12 @@ Mann:
 
 # Unihertz
 Unihertz:
-  regex: '(Titan|Jelly-Pro)(?:[);/ ]|$)'
+  regex: '(Titan|Jelly-Pro|Atom_L)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(Jelly)-(Pro)(?:[);/ ]|$)'
       model: '$1 $2'
-    - regex: '(Titan)(?:[);/ ]|$)'
+    - regex: '(Titan|Atom_L)(?:[);/ ]|$)'
       model: '$1'
 
 # Chuwi
@@ -16189,11 +16189,13 @@ DeWalt:
 
 # Runbo
 Runbo:
-  regex: 'Runbo'
+  regex: 'Runbo|F1-TT(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Runbo[ _-]?(X5-W|F1 Plus|F1-TT|F1-EN|F1|TT|Q5-S|X5-King|X6|Q5)(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'F1-TT'
+      model: 'F1-TT'
 
 # NewsMy
 NewsMy:
@@ -17448,13 +17450,15 @@ Ovvi:
 
 # Fero
 Fero:
-  regex: 'Fero_|Royale_X2'
+  regex: 'Fero[_ ]|Royale_X2'
   device: 'smartphone'
   models:
     - regex: 'Fero_Y1'
       model: 'Y1'
     - regex: 'Royale_X2'
       model: 'Royale X2'
+    - regex: 'Fero (A4001|A4502|L100)'
+      model: '$1'
 
 # Transpeed
 Transpeed:
