feat(device) detect brand Cherry Mobile models: Flare S5 Plus, Flare S5 Lite DTV, Flare S5

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3291,7 +3291,7 @@ Changhong:
 
 # Cherry Mobile
 'Cherry Mobile':
-  regex: 'Cherry|Flare([ _])?(2X|4|A[123]|J[1235]|P[13]|S[4568]|X2)|Flare[ _](?:S Play|HD_MAX|LITE|XL Plus|X_V2)|Fusion Bolt|OMEGA HD 4'
+  regex: 'Cherry|Flare([ _])?(2X|4|A[123]|J[1235]|P[13]|S[4568]|X2)|Flare[ _](?:S Play|S5 Plus|S5|HD_MAX|LITE|XL Plus|X_V2)|Fusion Bolt|OMEGA HD 4'
   device: 'smartphone'
   models:
     - regex: 'Cherry(?: ?Mobile)?[ _]?([^/;]+) Build'
@@ -3318,17 +3318,15 @@ Changhong:
       model: 'Flare S4 Max LTE'
     - regex: 'Flare S4 Max'
       model: 'Flare S4 Max'
-    - regex: 'FlareS5LiteDTV '
+    - regex: 'FlareS5LiteDTV'
       model: 'Flare S5 Lite DTV'
+    - regex: 'Flare S5 Plus'
+      model: 'Flare S5 Plus'
     - regex: 'Flare_S6_Plus'
       model: 'Flare S6 Plus'
     - regex: 'FLARE S6 POWER'
       model: 'Flare S6 Power'
-    - regex: 'Flare S6'
-      model: 'Flare S6'
-    - regex: 'Flare S8'
-      model: 'Flare S8'
-    - regex: 'Flare(?:[ _])?(4|A[13]|J[135]|P[13]|S4|X2)'
+    - regex: 'Flare(?:[ _])?(4|A[13]|J[135]|P[13]|S[4568]|X2)'
       model: 'Flare $1'
     - regex: 'OMEGA HD 4'
       model: 'Omega HD 4'
