feat(device) detect brand Huawei model: Ascend P7 (P7-L10) feat(device) detect brand Philips model: Xenium V787 (device) detect brand Motorola model: Moto G7

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5766,6 +5766,8 @@ Huawei:
       model: 'Ascend G630'
     - regex: 'G7-(?:L01|TL00)(?:[);/ ]|$)'
       model: 'Ascend G7'
+    - regex: 'P7-L10(?:[);/ ]|$)'
+      model: 'Ascend P7'
     - regex: 'G730-C00(?:[);/ ]|$)'
       model: 'Ascend G730'
     - regex: 'U9200(?:[);/ ]|$)'
@@ -9283,12 +9285,6 @@ Motorola:
       model: 'Moto X2'
     - regex: '(?:MOT-|Motorola-)?XT1254'
       model: 'Droid Turbo'
-    - regex: 'moto g power'
-      model: 'Moto G Power'
-    - regex: 'moto g\(([0-9])\) power'
-      model: 'Moto G$1 Power'
-    - regex: 'moto g\(([0-9])\) plus'
-      model: 'Moto G$1 Plus'
     - regex: '(?:MOT-|Motorola-)?XT10(?:28|3[1234]|68|69)'
       model: 'Moto G'
     - regex: '(?:MOT-|Motorola-)?XT1799-2'
@@ -9335,6 +9331,15 @@ Motorola:
       model: 'One Zoom'
     - regex: 'motorola one action'
       model: 'One Action'
+
+    - regex: 'moto g power'
+      model: 'Moto G Power'
+    - regex: 'moto g\(([0-9])\) power'
+      model: 'Moto G$1 Power'
+    - regex: 'moto g\(([0-9])\) plus'
+      model: 'Moto G$1 Plus'
+    - regex: 'moto g\(([0-9]+)\)'
+      model: 'Moto G$1'
 
     - regex: 'Moto ([CGEXZ]) ?\(([a-z0-9]+)\)( Plus| Play)?'
       model: 'Moto $1$2$3'
@@ -10616,8 +10621,8 @@ Philips:
   regex: 'Philips|AND1E(?:[);/ ]|$)|NETTV/|PI3210G|TLE(821L|722G)|TPM1[79]1E|70PUH6774_96|QM16[134]E|Xenium S[25]66'
   device: 'smartphone'
   models:
-    - regex: 'Xenium S([25]66)(?:[);/ ]|$)'
-      model: 'Xenium S$1'
+    - regex: '(?:Philips[_ ])?Xenium[ _](S[25]66|V787)(?:[);/ ]|$)'
+      model: 'Xenium $1'
     - regex: 'AND1E(?: TV)?(?:[);/ ]|$)'
       model: 'Android TV'
       device: 'tv'
@@ -15239,6 +15244,8 @@ ZTE:
       model: 'Libero 3'
     - regex: '901ZT(?:[);/ ]|$)'
       model: 'Libero S10'
+    - regex: 'A7020(?:[);/ ]|$)'
+      model: 'Blade A7s (2020)'
     - regex: 'ZTE 2050(?:[);/ ]|$)'
       model: 'Blade 20 Smart'
     - regex: '902ZT(?:[);/ ]|$)'
