feat(device) detect brand Telefunken model: Foxtrot 2 feat(device) detect brand Asus model: Transformer AiO P1801 18.4"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2022,6 +2022,9 @@ Asus:
     - regex: '(?:ASUS_)?P00C|P02[138]|P00L|P01T_1'
       model: 'ZenPad 10'
       device: 'tablet'
+    - regex: 'ASUS Tablet P1801-T'
+      model: 'Transformer AiO P1801 18.4"'
+      device: 'tablet'
 
     # explicit phablet models
     - regex: 'ME371MG(?:[);/ ]|$)'
@@ -13221,6 +13224,9 @@ Telefunken:
   models:
     - regex: 'TEL-1013GIQA'
       model: 'Giqa 10.1 3G'
+    - regex: 'Foxtrot2'
+      model: 'Foxtrot 2'
+      device: 'smartphone'
     - regex: '(?:TELEFUNKEN)?(TF-SP5001|Outdoor LTE|Foxtrot)'
       model: '$1'
       device: 'smartphone'
