feat(device) detect brand Logicom models: Le Must 2, Le Spark, Le Prime feat(device) detect brand LeEco model: Le 2 feat(device) detect brand Motorola models: Moto G6 Play, Moto G7 Supra feat(device) detect brand Elephone model: P6000 01

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4250,7 +4250,7 @@ Eks Mobility:
 
 # Elephone
 Elephone:
-  regex: 'Elephone|P6000( ?Pro| ?Plus|\+| ?02)? Build'
+  regex: 'Elephone|P6000( ?Pro| ?Plus|\+| ?02| 5.0 01)'
   device: 'smartphone'
   models:
     - regex: 'Elephone Trunk(?:[);/ ]|$)'
@@ -4259,6 +4259,8 @@ Elephone:
       model: 'P6000 Plus'
     - regex: 'P6000 02(?:[);/ ]|$)'
       model: 'P6000 02'
+    - regex: 'P6000 5.0 01(?:[);/ ]|$)'
+      model: 'P6000 01'
     - regex: 'P6000 ?Pro(?:[);/ ]|$)'
       model: 'P6000 Pro'
     - regex: '(?:Elephone[ _])?(P[68]000|S2)(?:[);/ ]|$)'
@@ -7783,7 +7785,7 @@ Ledstar:
 
 # LeEco
 LeEco:
-  regex: 'Letv|LeEco|X[89]00\+(?:[);/ ]|$)|Le ?X[0-9][^;/]+|Le Max|Le [12]|X900 Build'
+  regex: 'Letv|LeEco|X[89]00\+(?:[);/ ]|$)|Le ?X[0-9][^;/]+|Le Max|Le [12]|Le2[_ ]x527|X900 Build'
   device: 'smartphone'
   models:
     - regex: 'X800\+'
@@ -7796,7 +7798,7 @@ LeEco:
       model: '$1'
     - regex: 'X900 Build'
       model: 'Le X900'
-    - regex: 'Le ?X526 Build'
+    - regex: '(?:Le ?X526|Le2[_ ]x527|Le 2)(?:[);/ ]|$)'
       model: 'Le 2'
     - regex: 'Le ?X([^;/]+) Build'
       model: 'Le X$1'
@@ -8454,7 +8456,7 @@ Lingwin:
 
 # Logicom
 Logicom:
-  regex: 'LOGICOM[_ ]|(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La Tab 72|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-EGANTONE-R|L-?EMENT|Le[ _]?(?:Hop|Lift|Hola|Moov[2]?|Fit FR|Smooth(?: FR)?))[_);/ ]'
+  regex: 'LOGICOM[_ ]|(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La Tab 72|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-EGANTONE-R|L-?EMENT|Le[ _]?(?:Hop|Lift|Hola|Moov[2]?|Must 2|Fit FR|Spark|Prime|Smooth(?: FR)?))[_);/ ]'
   device: 'tablet'
   models:
     - regex: 'La Tab 72'
@@ -8506,6 +8508,15 @@ Logicom:
       device: 'smartphone'
     - regex: 'Le Smooth(?:[);/ ]|$)'
       model: 'Le Smooth'
+      device: 'smartphone'
+    - regex: 'Le Must 2(?:[);/ ]|$)'
+      model: 'Le Must 2'
+      device: 'smartphone'
+    - regex: 'Le[ _]Spark(?:[);/ ]|$)'
+      model: 'Le Spark'
+      device: 'smartphone'
+    - regex: 'Le[ _]Prime(?:[);/ ]|$)'
+      model: 'Le Prime'
       device: 'smartphone'
     - regex: 'L-EGANTONE-R'
       model: 'L-Egant One R'
@@ -9369,8 +9380,12 @@ Motorola:
       model: 'Moto G Power'
     - regex: 'moto g\(([0-9])\) power'
       model: 'Moto G$1 Power'
+    - regex: 'moto g\(([0-9])\) supra'
+      model: 'Moto G$1 Supra'
     - regex: 'moto g\(([0-9])\) plus'
       model: 'Moto G$1 Plus'
+    - regex: 'moto g\(([0-9]+)\) play'
+      model: 'Moto G$1 Play'
     - regex: 'moto g\(([0-9]+)\)'
       model: 'Moto G$1'
 
