feat(device) detect brand Huawei model: MatePad T10s (AGS3-L09), Nova 3 (PAR-LX1M) feat(device) detect brand Asus models: ZenFone Max M1 (X00PS),  ZenFone 4 Pro (Z01GS), ZenFone Max Pro M1 (X00T), ZenFone 7 (I002D)
feat(device) detect brand Pixus models: Blast 10.1", Joker 10.1"
feat(device) detect brand Oukitel models: WP2, K7
feat(device) detect brand Vontar model: X3
feat(device) detect brand Vivax model: Pro 3
feat(device) detect brand Neffos model: A5
feat(browser) detect new browser Monument Browser
feat(browser) detect new brand Iris modes: Vox 5S, Vox Alpha Plus,
 Vox Alpha, Vox Pop Plus, Vox Pop Pro

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2543,3 +2543,11 @@
     version: "2.0.20.39"
     engine: ""
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 Windows Phone 10.0; Android 8.1; Monument Browser AppleWebKit/537.36 KHTML, like Gecko Chrome/68.0.3440.91 Mobile Safari/537.36 MonumentBrowser/2.2
+  client:
+    type: browser
+    name: Monument Browser
+    version: "2.2"
+    engine: WebKit
+    engine_version: "537.36"
