--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1224,6 +1224,14 @@
   engine:
     default: 'WebKit'
 
+# Monument Browser
+- regex: 'MonumentBrowser(?:/(\d+[\.\d]+))?'
+  name: 'Monument Browser'
+  version: '$1'
+  engine:
+    default: 'WebKit'
+
+# Blue Browser
 - regex: 'BlueBrowser(?:/(\d+[\.\d]+))?'
   name: 'Blue Browser'
   version: '$1'
