--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2051,7 +2051,7 @@ Asus:
       model: 'ZenFone V Live'
     - regex: '(?:ASUS_)?Z007'
       model: 'ZenFone C'
-    - regex: '(?:ASUS_)?(X00PD|ZB555KL)'
+    - regex: '(?:ASUS_)?(X00P[SD]|ZB555KL)'
       model: 'ZenFone Max M1'
     - regex: '(?:ASUS_)?(ZB601KL)'
       model: 'ZenFone Max Pro M1'
@@ -2083,11 +2083,13 @@ Asus:
       model: 'ZenFone 5Z'
     - regex: '(?:ASUS_)?(?:T00G|Z002|ZS630KL|I01WD[X]?)'
       model: 'ZenFone 6'
+    - regex: '(?:ASUS_)?I002D'
+      model: 'ZenFone 7'
     - regex: '(?:ASUS_)?Z010D'
       model: 'ZenFone Max'
     - regex: '(?:ASUS_)?X018D'
       model: 'ZenFone Max Plus M1'
-    - regex: '(?:ASUS_)?X00TD'
+    - regex: '(?:ASUS_)?X00TD?'
       model: 'ZenFone Max Pro M1'
     - regex: '(?:ASUS_)?X01BDA|ZB631KL'
       model: 'ZenFone Max Pro M2'
@@ -2139,7 +2141,7 @@ Asus:
       model: 'ZenFone 4 Selfie Pro'
     - regex: 'ZD553KL'
       model: 'ZenFone 4 Selfie'
-    - regex: '(?:ASUS_)?(:?Z01GD|ZS551KL)'
+    - regex: '(?:ASUS_)?(:?Z01G[DS]|ZS551KL)'
       model: 'ZenFone 4 Pro'
     - regex: '(?:ASUS_)?ZB602KL'
       model: 'ZenFone Max Pro'
@@ -5732,7 +5734,7 @@ Minix:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?)|JEF-[AT]N00|MED-(?:[AT]L00|LX9N?)|EBG-AN[01]0|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-AN00|JKM-AL00a|TAH-AN00m|C8817D|T1-821W|d-01J|d-02[HK]|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-L09'
+  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?)|JEF-[AT]N00|MED-(?:[AT]L00|LX9N?)|EBG-AN[01]0|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-AN00|JKM-AL00a|TAH-AN00m|C8817D|T1-821W|d-01J|d-02[HK]|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-L09|AGS3-L09'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a(?:[);/ ]|$)'
@@ -6063,7 +6065,7 @@ Huawei:
       model: 'Nova 2I'
     - regex: 'HWI-[AT]L00(?:[);/ ]|$)'
       model: 'Nova 2S'
-    - regex: 'PAR-(?:[AT]L00|LX[19]|TL20)(?:[);/ ]|$)'
+    - regex: 'PAR-(?:[AT]L00|LX[19]|LX1M|TL20)(?:[);/ ]|$)'
       model: 'Nova 3'
     - regex: 'ANE-AL00(?:[);/ ]|$)'
       model: 'Nova 3e'
@@ -6238,6 +6240,9 @@ Huawei:
       device: 'tablet'
     - regex: 'BAH3-(?:AL00|[LW]09)(?:[);/ ]|$)'
       model: 'MatePad 10.4"'
+      device: 'tablet'
+    - regex: 'AGS3-L09(?:[);/ ]|$)'
+      model: 'MatePad T10s'
       device: 'tablet'
     - regex: 'HDL-(?:W09|AL09)(?:[);/ ]|$)'
       model: 'Honor Water Play 8.0'
@@ -9553,7 +9558,7 @@ Neffos:
       model: 'Y50'
     - regex: 'Neffos X20 Pro'
       model: 'X20 Pro'
-    - regex: 'Neffos[_ ]((?:Y|N|C|X)[0-9][A-Z]?(?: Max| Lite)?)'
+    - regex: 'Neffos[_ ]((?:[YNCXA])[0-9][A-Z]?(?: Max| Lite)?)'
       model: '$1'
 
 # Nextbit
@@ -10387,17 +10392,17 @@ Oukitel:
   regex: 'OUKITEL|(?:(?:C15|C16|K10000|K[46]000)(?:[ _]Pro)|U20_Plus|WP5 Pro|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4567]000)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: '(C15|C16|K10000|K[46]000|WP5)[ _]Pro(?:[);/ ]|$)'
+    - regex: '(C15|C16|K10000|K[46]000|WP[25])[ _]Pro(?:[);/ ]|$)'
       model: '$1 Pro'
-    - regex: 'OUKITEL K3(?:[);/ ]|$)'
-      model: 'K3'
+    - regex: 'OUKITEL K([37])(?:[);/ ]|$)'
+      model: 'K$1'
     - regex: '(K10000)[ _]Max(?:[);/ ]|$)'
       model: '$1 Max'
     - regex: '(U20|K[46]000)[_ ]Plus(?:[);/ ]|$)'
       model: '$1 Plus'
     - regex: '(K4000)[_ ]Lite(?:[);/ ]|$)'
       model: '$1 Lite'
-    - regex: '(Y4800|K10000|K[4567]000)(?:[);/ ]|$)'
+    - regex: '(Y4800|K10000|K[4567]000|WP2)(?:[);/ ]|$)'
       model: '$1'
 
 # Ouki
@@ -10679,6 +10684,10 @@ Pixus:
       model: 'Touch 7 3G'
     - regex: 'Pixus[ _]hiMax'
       model: 'HiMax 9.6"'
+    - regex: 'Pixus[ _]Blast'
+      model: 'Blast 10.1"'
+    - regex: 'Pixus[ _]Joker'
+      model: 'Joker 10.1"'
 
     - regex: 'Raze'
       model: 'Raze'
@@ -14725,7 +14734,7 @@ Toshiba:
 
 # Vivax (www.vivax.com)
 Vivax:
-  regex: 'VIVAX|(?:Fly5[_ ]Lite|Fun[_ ]S500|Point_X2)(?:[);/ ]|$)'
+  regex: 'VIVAX|(?:Fly5[_ ]Lite|Fun[_ ]S500|Point_X2|PRO3)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Fly5[_ ]Lite(?:[);/ ]|$)'
@@ -14740,6 +14749,8 @@ Vivax:
       model: '$1'
     - regex: 'SMART Point X5010(?:[);/ ]|$)'
       model: 'Smart Point X5010'
+    - regex: 'VIVAX[_ ]PRO3'
+      model: 'Pro 3'
 
 # MLS
 MLS:
@@ -16403,10 +16414,10 @@ Ryte:
 
 # Vontar
 Vontar:
-  regex: '(HK1 (?:Max|MINI|PLUS|PRO)|VONTAR[ -](?:Z[58]|V1|KIII|MX-4K))(?:[);/ ]|$)'
+  regex: '(HK1 (?:Max|MINI|PLUS|PRO)|VONTAR[ -](?:Z[58]|V1|KIII|MX-4K|X3))(?:[);/ ]|$)'
   device: 'tv'
   models:
-    - regex: 'VONTAR[ -](Z[58]|V1|KIII|MX-4K)(?:[);/ ]|$)'
+    - regex: 'VONTAR[ -](Z[58]|V1|KIII|MX-4K|X3)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'HK1 Max(?:[);/ ]|$)'
       model: 'HK1 Max'
@@ -17465,3 +17476,19 @@ Swisstone:
   regex: 'swisstone (SD 5[13]0)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# Iris
+Iris:
+  regex: '(?:Vox[_ ](?:5S|Alpha|POP))(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Vox_5S'
+      model: 'Vox 5S'
+    - regex: 'VOX Alpha Plus'
+      model: 'Vox Alpha Plus'
+    - regex: 'VOX Alpha'
+      model: 'Vox Alpha'
+    - regex: 'VOX POP plus'
+      model: 'Vox Pop Plus'
+    - regex: 'VOX POP Pro'
+      model: 'Vox Pop Pro'
