feat(device) detect brand bq models: Choice (BQ-5016G), Fast Pro (BQ-5540L), Aura (BQ-6022G) feat(device) detect brand Huawei model: Y5 (2019) (AMN-LX3) feat(device) detect brand Aligator models: RX710, RX800 feat(device) detect brand Condor model: Allure X

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2852,6 +2852,8 @@ bq:
       device: 'tablet'
     - regex: 'BQ-6200L|BQ-6000L'
       model: 'Aurora'
+    - regex: 'BQ-6022G'
+      model: 'Aura'
     - regex: 'BQ(ru)?[ -]6015L'
       model: 'Universe'
     - regex: 'BQ-6010G|BQ(?:ru)?-5525'
@@ -2872,6 +2874,8 @@ bq:
       model: 'Silk'
     - regex: 'BQ-5519L(?:[);/ ]|$)'
       model: 'Fast Plus'
+    - regex: 'BQ-5540L(?:[);/ ]|$)'
+      model: 'Fast Pro'
     - regex: 'BQ-5517L(?:[);/ ]|$)'
       model: 'Twin Pro'
     - regex: 'BQ-5516L(?:[);/ ]|$)'
@@ -2964,6 +2968,8 @@ bq:
       model: 'Bond'
     - regex: 'BQ-5015L(?:[);/ ]|$)'
       model: 'First'
+    - regex: 'BQ-5016G(?:[);/ ]|$)'
+      model: 'Choice'
     - regex: 'BQ-5012L(?:[);/ ]|$)'
       model: 'Rich'
     - regex: 'BQ-5521L(?:[);/ ]|$)'
@@ -3473,7 +3479,7 @@ ConCorde:
 
 # Condor
 Condor:
-  regex: 'Allure M[13]|Griffe T[256789]|TFX712G|TRA-901G|TGW[-]?(710G|709)|(?:PGN\-?[456][012][0-9]|PHS\-601|PHQ519|PHQ52[056]|PKT\-301|Plume (?:H1|L[123]|P8))(?:[);/ ]|$)|CTAB[^/;]+ Build'
+  regex: 'Allure (?:M[13]|X)|Griffe T[256789]|TFX712G|TRA-901G|TGW[-]?(710G|709)|(?:PGN\-?[456][012][0-9]|PHS\-601|PHQ519|PHQ52[056]|PKT\-301|Plume (?:H1|L[123]|P8))(?:[);/ ]|$)|CTAB[^/;]+ Build'
   device: 'smartphone'
   models:
     - regex: 'CTAB([^/;]+) Build'
@@ -3505,7 +3511,7 @@ Condor:
       model: 'C8S'
     - regex: 'PGN\-?506'
       model: 'C7'
-    - regex: '(Allure M[13])'
+    - regex: '(Allure (?:M[13]|X))'
       model: '$1'
     - regex: 'PGN\-?507'
       model: 'Allure A9'
@@ -6208,7 +6214,7 @@ Huawei:
       model: 'Y5 (2017)'
     - regex: 'DRA-L(?:01|03|21|23|X3)(?:[);/ ]|$)'
       model: 'Y5 (2018)'
-    - regex: 'AMN-LX[129](?:[);/ ]|$)'
+    - regex: 'AMN-LX[1239](?:[);/ ]|$)'
       model: 'Y5 (2019)'
     - regex: 'DRA-LX5(?:[);/ ]|$)'
       model: 'Y5 lite'
@@ -16401,7 +16407,7 @@ Aligator:
   regex: 'ALIGATOR[_ ]'
   device: 'smartphone'
   models:
-    - regex: 'ALIGATOR[ _](S4080|S50(?:6[56]|[678]0)|RX510|S6500)(?:[);/ ]|$)'
+    - regex: 'ALIGATOR[ _](S4080|S50(?:6[56]|[678]0)|RX510|S6500|RX710|RX800)(?:[);/ ]|$)'
       model: '$1'
 
 # Maxcom
