feat(device) detect brand DEXP model: Ursus VA170 feat(browser) detect Japan Browser feat(browser) detect Yandex Browser

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3898,7 +3898,7 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|(SENIOR|F4[38]D8000K|VA[12]10|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AS260| (?:B450|B340|A1[45]0))(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|(SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AS260| (?:B450|B340|A1[45]0))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
 
@@ -3913,7 +3913,7 @@ DEXP:
     - regex: 'Ursus ([^;/)]+)(?: Build|\))'
       model: 'Ursus $1'
       device: 'tablet'
-    - regex: '(VA[21]10)(?:[);/ ]|$)'
+    - regex: '(VA[21]10|VA170)(?:[);/ ]|$)'
       model: 'Ursus $1'
       device: 'tablet'
 
