feat(browser) detect Yandex Browser & fix tests
issue #6344

--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -439,8 +439,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Mobile
-    version: "77.0.3865.116"
+    name: Yandex Browser
+    version: "9.36"
     engine: Blink
     engine_version: ""
   device:
@@ -448,7 +448,7 @@
     brand: Vivo
     model: Y93
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; Android 8.1.0; vivo 1815 Build/O11019) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.116 Mobile Safari/537.36 YaApp_Android/9.35 YaSearchBrowser/9.35
   os:
@@ -457,8 +457,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Mobile
-    version: "77.0.3865.116"
+    name: Yandex Browser
+    version: "9.35"
     engine: Blink
     engine_version: ""
   device:
@@ -466,7 +466,7 @@
     brand: Vivo
     model: Y93
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; Android 8.1.0; V1818T Build/OPM1.171019.026; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/62.0.3202.84 Mobile Safari/537.36
   os:
