--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -3244,8 +3244,8 @@
     platform: ""
   client:
     type: browser
-    name: Chrome Mobile
-    version: "86.0.4240.99"
+    name: Yandex Browser
+    version: "9.20"
     engine: Blink
     engine_version: ""
   device:
@@ -3253,7 +3253,7 @@
     brand: Samsung
     model: GALAXY M31s
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 -
   user_agent: Mozilla/5.0 (Linux; U; Android 10; en-us; RMX1973 Build/QKQ1.190918.001) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/70.0.3538.80 Mobile Safari/537.36 HeyTapBrowser/45.7.1.9
   os:
@@ -4445,8 +4445,8 @@
     platform: ARM
   client:
     type: browser
-    name: Chrome
-    version: 84.0.4147.135
+    name: Yandex Browser
+    version: "20.85.0"
     engine: Blink
     engine_version: ""
   device:
@@ -4454,7 +4454,7 @@
     brand: Xiaomi
     model: MI 9 Lite
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 -
   user_agent: Mozilla/5.0 (Linux; Android 10; Mi Note 10 Pro) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.75 Mobile Safari/537.36
   os:
@@ -5237,8 +5237,8 @@
     platform: ARM
   client:
     type: browser
-    name: Chrome
-    version: 85.0.4183.127
+    name: Yandex Browser
+    version: "20.91.0"
     engine: Blink
     engine_version: ""
   device:
@@ -5246,7 +5246,7 @@
     brand: Huawei
     model: Ascend P7
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 -
   user_agent: Mozilla/5.0 (Linux; arm_64; Android 5.1; Philips_Xenium_V787) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.127 YaBrowser/20.9.2.95.00 SA/3 Mobile Safari/537.36
   os:
@@ -6711,8 +6711,8 @@
     platform: ARM
   client:
     type: browser
-    name: Chrome
-    version: 83.0.4103.116
+    name: Yandex Browser
+    version: "20.73"
     engine: Blink
     engine_version: ""
   device:
@@ -6720,7 +6720,7 @@
     brand: bq
     model: Fast Pro
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 -
   user_agent: Mozilla/5.0 (Linux; Android 9; arm; BQ-6022G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.116 YaBrowser/20.7.5.84.00 SA/1 Mobile Safari/537.36
   os:
