--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -5370,8 +5370,8 @@
     platform: ARM
   client:
     type: browser
-    name: Chrome
-    version: "81.0.4044.138"
+    name: Yandex Browser
+    version: "11.41"
     engine: Blink
     engine_version: ""
   device:
@@ -5379,7 +5379,7 @@
     brand: Xiaomi
     model: Redmi Note 8 Pro
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; Android 10; M2003J15SC Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/83.0.4103.106 Mobile Safari/537.36 (Mobile; afma-sdk-a-v202117037.202117037.0)
   os:
