feat(os) detect  OS of an inverted Android (diordnA) issue #6418

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -125,7 +125,12 @@
 - regex: 'BeyondPod|AntennaPod|Podkicker|DoggCatcher|Player FM|okhttp|Podcatcher Deluxe'
   name: 'Android'
   version: ''
-  
+
+# Inverted Android
+- regex: 'Linux; diordnA[; ](\d+[\.\d]*)'
+  name: 'Android'
+  version: '$1'
+
   
 ##########
 # AmigaOS
