feat(device) detect brand Advan excluded issue #6418

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -993,7 +993,7 @@ Acer:
 
 # Advan
 Advan:
-  regex: '(?:ADVAN (?:M4|S40)|i7U|S45E|50[46]1|5059|S50H|I7D|i55[KD]|i4U|S7D|S4Z|i5[KE]|S5E[ _]NXT|S5J\+|S4\+)(?:[);/ ]|$)'
+  regex: '(?:ADVAN (?:M4|S40)|i7U|S45E|(?<!\.)50(?:[46]1|59)|S50H|I7D|i55[KD]|i4U|S7D|S4Z|i5[KE]|S5E[ _]NXT|S5J\+|S4\+)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'ADVAN M4'
