Improve/simplify detection of Jezz devices

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14615,48 +14615,22 @@ Yezz:
   regex: 'Yezz|ANDY[ _]|4E4|A5EI'
   device: 'smartphone'
   models:
-    - regex: 'ANDY_35E2I'
-      model: 'Andy 3.5E2I'
-    - regex: 'ANDY_35EI2'
-      model: 'Andy 3.5EI2'
-    - regex: 'Andy 3.5EI'
-      model: 'Andy 3.5EI'
-    - regex: 'ANDY_45EL'
-      model: 'Andy 4.5EL'
-    - regex: 'Andy 4.7T'
-      model: 'Andy 4.7T'
-    - regex: 'ANDY_4E2I'
-      model: 'Andy 4E2I'
     - regex: '4E4'
       model: 'Andy 4E4'
-    - regex: 'ANDY_4EI2'
-      model: 'Andy 4EI2'
     - regex: 'Yezz-AC4EI'
       model: 'Andy 4EI'
     - regex: 'YEZZ-A4M'
       model: 'Andy A4M'
-    - regex: 'ANDY_4EL2_LTE'
-      model: 'Andy 4EL2 LTE'
-    - regex: 'Andy_55EI'
-      model: 'Andy 55EI'
-    - regex: 'ANDY_5EI'
-      model: 'Andy 5EI'
-    - regex: 'Andy 5EL2 LTE'
-      model: 'Andy 5EL2 LTE'
-    - regex: 'Andy_5ML_LTE'
-      model: 'Andy 5ML LTE'
-    - regex: 'Andy_5T'
-      model: 'Andy 5T'
-    - regex: 'A3.5EP'
-      model: 'Andy A3.5EP'
     - regex: 'A5EI'
       model: 'Andy A5EI'
-    - regex: 'ANDY_C5QL'
-      model: 'Andy C5QL'
-    - regex: 'ANDY_5EL'
-      model: 'Andy 5EL'
-    - regex: 'ANDY[_ ]5EI'
-      model: 'Andy 5EI'
+
+    - regex: 'Andy[ _]([A-Z]*[0-9]\.[0-9][A-Z0-9]*)(?:[ _](LTE))?'
+      model: 'Andy $1 $2'
+    - regex: 'Andy[ _]([A-Z]*[0-9])([0-9][A-Z0-9]*)(?:[ _](LTE))?'
+      model: 'Andy $1.$2 $3'
+    - regex: 'Andy[ _]([A-Z]*[0-9][A-Z0-9]+)(?:[ _](LTE))?'
+      model: 'Andy $1 $2'
+
 
 # Yu
 Yu:
