--- a/Tests/fixtures/smartphone-18.yml
+++ b/Tests/fixtures/smartphone-18.yml
@@ -629,7 +629,7 @@
     model: GALAXY J1 Mini
   os_family: Android
   browser_family: Chrome
-- 
+-
   user_agent: Mozilla/5.0 (Linux; Android 5.1.1; SM-N920X Build/LMY47X) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.158 Mobile Safari/537.36
   os:
     name: Android
@@ -4785,4 +4785,112 @@
     model: A5
   os_family: Android
   browser_family: Opera
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.2; Andy 3.5EH Build/JDQ39)
+  os:
+    name: Android
+    version: "4.2.2"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Yezz
+    model: Andy 3.5EH
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.2; ANDY_A3.5EP Build/JDQ39)
+  os:
+    name: Android
+    version: "4.2.2"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Yezz
+    model: Andy A3.5EP
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.2; Andy C3.5EI Build/JDQ39
+  os:
+    name: Android
+    version: "4.2.2"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Yezz
+    model: Andy C3.5EI
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.2; Andy 4EI Build/JDQ39)
+  os:
+    name: Android
+    version: "4.2.2"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Yezz
+    model: Andy 4EI
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.2; Yezz Andy AC4E Build/JDQ39)
+  os:
+    name: Android
+    version: "4.2.2"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Yezz
+    model: Andy AC4E
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.2; Andy_3.5E2I Build/KOT49H)
+  os:
+    name: Android
+    version: "4.4.2"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Yezz
+    model: Andy 3.5E2I
+  os_family: Android
+  browser_family: Android Browser
 
